WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284619
[css-anchor-position-1] Fix anchor-center alignment corner case
https://bugs.webkit.org/show_bug.cgi?id=284619
Summary
[css-anchor-position-1] Fix anchor-center alignment corner case
Pawel Lampe
Reported
2024-12-13 02:16:09 PST
When anchor target has a width: auto, the width is calculated wrong way due to inset properties evaluating to 0 (following the spec) in case of anchor positioning.
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-12-13 06:34:17 PST
Actually, I'm not 100% sure if this wrong. I'll try to check this with some spec experts.
Radar WebKit Bug Importer
Comment 2
2024-12-20 02:17:15 PST
<
rdar://problem/141812145
>
Pawel Lampe
Comment 3
2025-01-06 04:08:01 PST
I've confirmed that this indeed is a bug as alignment values other than 'normal' and 'stretch' use shrink-to-fit sizing for absolutely positioned items
Pawel Lampe
Comment 4
2025-01-06 10:57:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37901
fantasai
Comment 5
2025-03-03 13:22:30 PST
This should be fixed by
https://github.com/WebKit/WebKit/pull/41603
Pawel Lampe
Comment 6
2025-03-04 01:33:36 PST
Confirmed - this is fixed with
https://github.com/WebKit/WebKit/pull/41603
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug